--- a/public/index.html
+++ b/public/index.html
@@ -265,7 +265,7 @@
                     <div class="uppercase text-3xl font-bold mb-14">pencil group</div>
 
                     <div class="flex flex-col md:flex-row gap-7 xl:w-[65%] w-[90%] md:h-[500px]">
-                        <div class="hover:cursor-pointer hover:animate-pulse w-full h-[400px] shadow-2xl">
+                        <div class="w-full h-[400px] shadow-2xl">
                             <div class="mx-auto w-[200px] h-[200px] bg-[url(./img/vinh-avt.jpg)] bg-cover bg-no-repeat bg-center mb-6">
 
                             </div>
@@ -281,7 +281,7 @@
                             </div>
                         </div>
 
-                        <div class="hover:cursor-pointer hover:animate-pulse w-full h-[400px] shadow-2xl">
+                        <div class="w-full h-[400px] shadow-2xl">
                             <div class="mx-auto w-[200px] h-[200px] bg-[url(./img/nha-avt.jpg)] bg-cover bg-no-repeat bg-center mb-6">
 
                             </div>
@@ -297,7 +297,7 @@
                             </div>
                         </div>
 
-                        <div class="hover:cursor-pointer hover:animate-pulse w-full h-[400px] shadow-2xl">
+                        <div class="w-full h-[400px] shadow-2xl">
                             <div class="mx-auto w-[200px] h-[200px] bg-[url(./img/trung-avt.jpg)] bg-cover bg-no-repeat bg-center mb-6">
 
                             </div>
